Align Controls, Floating Back Button Fixes

--- a/css/ifttt.css
+++ b/css/ifttt.css
@@ -14,26 +14,33 @@
 	
 	/* Floating Back Button */
 	html .ifttt-next.activities-body .activity-back-button,
-	html body.connections-body.show-action .connection-header .connection-back-button,
-	html body.connections-body.edit-action .connection-header .connection-back-button,
+	html body.connections-body .connection-header .connection-back-button,
 	html body.access-applets-body.edit-action .connection-header .connection-back-button,
+	html body.services-body.show-action .ifttt-back-button a.btn,
 		
 		/* Floating Settings Button */
-	html body.connections-body.show-action .connection-header .connection-settings-btn,
-	html body.connections-body.edit-action .connection-header .connection-settings-btn,
+	html body.connections-body .connection-header .connection-settings-btn,
 	html body.access-applets-body.edit-action .connection-header .connection-settings-btn {
 		position: fixed;
 		top: calc(1em + 100px);
 	}
 	
 	/* Floating Back Button */
-	html body.connections-body.edit-action #config-editor .connection-back-btn,
-	html body.access-applets-body.edit-action #config-editor .connection-back-btn {
-		position: fixed;
+	html body #config-editor .connection-back-btn,
+	html body #config-editor .connection-back-btn {
+		position: fixed !important;
+		z-index: 9999;
+	}
+	
+	/* Floating Back Button */
+	html body #config-editor .connection-back-btn .btn,
+	html body #config-editor .connection-back-btn .btn {
+		background-color: white;
 	}
 	
 	/* Invert Floating Back Button when it's outside of a colored header */
 	html body[style="background-color: rgb(0, 0, 0);"] .connection-header .connection-back-button .btn.btn-outlined,
+	html body[style="background-color: rgb(0, 0, 0);"].services-body.show-action .ifttt-back-button a.btn,
 		/* Floating Settings Button when it's outside of a colored header */
 	html body[style="background-color: rgb(0, 0, 0);"] .connection-header .connection-settings-btn .btn.btn-outlined {
 		filter: invert(1);
@@ -162,7 +169,7 @@
 	html .connections-body.edit-action #config-editor .connection-config-editor,
 	html .access-applets-body.edit-action #config-editor .connection-config-editor {
 		width: 100% !important;
-		max-width: calc(100vw - 200px);
+		max-width: 1284px;
 	}
 	
 	/* Applet Edit: Fields in 2 Columns */
@@ -175,6 +182,21 @@
 		align-items: baseline;
 	}
 	
+	/* Align Controls */
+	html body.connections-body.edit-action #config-editor .connection-push-notifications,
+	html body.access-applets-body.edit-action #config-editor .connection-push-notifications,
+	html body.connections-body.edit-action #config-editor .connection-view-activity,
+	html body.access-applets-body.edit-action #config-editor .connection-view-activity {
+		max-width: 50em;
+	}
+	
+	/* Align Controls */
+	html body.connections-body.edit-action #config-editor .connection-view-activity .connection-check,
+	html body.access-applets-body.edit-action #config-editor .connection-view-activity .connection-check {
+		float: none;
+		margin-top: 3.5em;
+	}
+	
 }
 
 @media (max-width: 1443px) {
@@ -183,6 +205,10 @@
 
 @media (min-width: 724px) and (max-width: 1443px) {
 	
+}
+
+html body {
+	overflow: hidden;
 }
 
 html .dashboard-body.services-action .my-services .services-list {
@@ -245,7 +271,7 @@ html body.access-applets-body.edit-action .connection-header .cta {
 	word-break: break-word;
 }
 
-/* Remove the giant spacing at the bottom of the page */
-.breath-space {
-	display: none;
+/* Decrease size of the giant spacing at the bottom of the page */
+html .breath-space {
+	min-height: 30vmin;
 }
